syntax = "proto3";
package com.kpn.dsh.iuc.messages.proto3;
option java_package = "com.kpn.dsh.iuc.messages.proto3";
 
 
message resultstatus { 
 int32 status = 1 ;
 string msg_code = 2 ;
 string error_code = 3 ;
 string error_description = 4 ;
}
